<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.myresearchhw.MainActivity">
    <ImageView
        android:id="@+id/imgview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lbl_iv_image_captured"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_et_name"
        android:id="@+id/tv_name"
     />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_et_last_name"
        android:id="@+id/tv_lastname"
     />
    <Button
        android:text="@string/lbl_btn_activate_camera_4_fun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="activateCamera"/>
    <Button
        android:text="@string/lbl_btn_see_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callDetailActivity"/>


</LinearLayout>
